solved the alignment and spacing issues

--- a/res/css/views/messages/_MessageActionBar.scss
+++ b/res/css/views/messages/_MessageActionBar.scss
@@ -26,7 +26,7 @@ limitations under the License.
     background: $background;
     border: 1px solid $input-border-color;
     top: -32px;
-    right: 8px;
+    margin-right: 90%;
     user-select: none;
     // Ensure the action bar appears above over things, like the read marker.
     z-index: 1;
